Use FireBase to locale storage to save value of Language and Dark mode . edit some files to work fine .

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -10,5 +10,8 @@
   "hadeth": "الحديث",
   "sebha": "السبحة",
   "radio": "الراديو",
-  "settings": "الاعدادات"
+  "settings": "الاعدادات",
+  "darkMode": "الوضع الداكن",
+  "thanksGod": " الحمدلله",
+  "saveSettings" : "حفظ الاعدادات"
 }
